# transcriptomics

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: GSE334363_design.csv  export_excel.py  lookup_geneset.py  make_docs.py  make_figures.py  prep_gse336399.py  volcano_geneset.py
docs/: index.html
tests/: test_accession.py
transcriptomics/: __init__.py  __main__.py  accession.py  cli.py  config.py  de.py  download.py  enrich.py  geo_design.py  logging_utils.py  metadata.py  models.py  quantify.py  report.py  samplesheet.py  webapp.py
